k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-account-ingress
  namespace: mini
spec:
  ingressClassName: nginx
  rules:
    - host: mini-account.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-account-management-service
                port:
                  number: 80
